--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "@turf/line-intersect": "^6.3.0",
+    "@turf/turf": "^6.3.0",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
     "mapbox-gl": "^2.1.1",
